all : Fix translations

--- a/modules/cog_utils/locale/fr_FR.po
+++ b/modules/cog_utils/locale/fr_FR.po
@@ -9,15 +9,14 @@ msgstr "Le code doit être unique !"
 msgctxt "error:export_not_found:"
 msgid "Cannot import : no object %s with functionnal key : \"%s\" were found."
 msgstr ""
-"Impossible d'importer: pas d'objet %s avec la clé fonctionnelle %s n'a été "
-"trouvé."
+"Impossible d'importer: pas d'objet %s trouvé avec la clé fonctionnelle %s"
 
 msgctxt "error:export_not_unique:"
 msgid ""
 "Cannot import : the following objects:\\n%s\\n share the same functional "
 "key:\\n\"%s\"."
 msgstr ""
-"Impossible d'importer: les objets suivants:\\n%s\\n partage la même clé "
+"Impossible d'importer: les objets suivants:\\n%s\\n partagent la même clé "
 "fonctionnelle:\\n\"%s\"."
 
 msgctxt "error:ir.attachment:"
