all: change translation for effective date
ref #1750 :'Traductions sur mesure'
http://rietveld.coopengo.com/13130001

--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -284,7 +284,7 @@ msgstr "Date d'effet du contrat"
 
 msgctxt "field:contract.bank_account.change.select,effective_date:"
 msgid "Effective Date"
-msgstr "Date effective"
+msgstr "Date d'effet"
 
 msgctxt "field:contract.bank_account.change.select,id:"
 msgid "ID"
