--- a/modules/endorsement_set/locale/fr_FR.po
+++ b/modules/endorsement_set/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -80,7 +80,7 @@ msgstr "Définition"
 
 msgctxt "field:endorsement.set,effective_date:"
 msgid "Effective Date"
-msgstr "Date effective"
+msgstr "Date d'effet"
 
 msgctxt "field:endorsement.set,endorsements:"
 msgid "Endorsements"
