--- a/modules/endorsement_process/locale/fr_FR.po
+++ b/modules/endorsement_process/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -108,7 +108,7 @@ msgstr "Définition"
 
 msgctxt "field:endorsement.start.find_process,effective_date:"
 msgid "Effective Date"
-msgstr "Date effective"
+msgstr "Date d'effet"
 
 msgctxt "field:endorsement.start.find_process,good_process:"
 msgid "Good Process"
