--- a/modules/commission_insurance/locale/fr_FR.po
+++ b/modules/commission_insurance/locale/fr_FR.po
@@ -44,11 +44,11 @@ msgctxt "field:commission,broker:"
 msgid "Broker"
 msgstr "Courtier"
 
-msgctxt "field:commission,commissionned_contract:"
+msgctxt "field:commission,commissioned_contract:"
 msgid "Commissioned Contract"
 msgstr "Contrat commissionné"
 
-msgctxt "field:commission,commissionned_option:"
+msgctxt "field:commission,commissioned_option:"
 msgid "Commissioned Option"
 msgstr "Option commissionnée"
 
@@ -304,8 +304,8 @@ msgctxt "model:ir.action,name:"
 msgid "Brokers"
 msgstr "Courtiers"
 
-msgctxt "model:ir.action,name:act_broker_commissionned_contract_relate_form"
-msgid "Commissionned Contracts"
+msgctxt "model:ir.action,name:act_broker_commissioned_contract_relate_form"
+msgid "Commissioned Contracts"
 msgstr "Contrats commissionnés"
 
 msgctxt "model:ir.action,name:act_commission_create_agents"
