--- a/modules/endorsement_insurance_invoice_sepa/locale/fr_FR.po
+++ b/modules/endorsement_insurance_invoice_sepa/locale/fr_FR.po
@@ -7,10 +7,23 @@ msgid "A new mandate will be created, this action cannot be cancelled"
 msgstr ""
 "Un nouveau mandat va être créé, cette action ne pourra pas être annulée !"
 
+msgctxt "error:contract.direct_debit_account.change:"
+msgid "A new mandate will be created, this action cannot be cancelled"
+msgstr ""
+"Un nouveau mandat va être créé, cette action ne pourra pas être annulée !"
+
 msgctxt "field:contract.billing_information.change,mandate_needed:"
 msgid "Mandate Needed"
 msgstr "Mandat Requis"
 
 msgctxt "field:contract.billing_information.change,sepa_signature_date:"
+msgid "Sepa Mandate Signature Date"
+msgstr "Date de signature du mandat SEPA"
+
+msgctxt "field:contract.direct_debit_account.change,mandate_needed:"
+msgid "Mandate Needed"
+msgstr "Mandat Requis"
+
+msgctxt "field:contract.direct_debit_account.change,sepa_signature_date:"
 msgid "Sepa Mandate Signature Date"
 msgstr "Date de signature du mandat SEPA"
