--- a/modules/contract_insurance_invoice/CHANGELOG
+++ b/modules/contract_insurance_invoice/CHANGELOG
@@ -1,3 +1,5 @@
+* Allow to configure premium with tax included
+
 Version 1.4 - 2015-05-29
 * Invoice premiums with at_contract_signature frequency at contract activation
 * Manage invoicing of non periodic frequencies
