commission_insurance: Display commission rate on commission Fix #1936: https://redmine.coopengo.com/issues/1936 http://rietveld.coopengo.com/14220001

--- a/modules/commission_insurance/CHANGELOG
+++ b/modules/commission_insurance/CHANGELOG
@@ -1,3 +1,5 @@
+* Display commission rate on commission
+
 Version 1.4 - 2015-05-29
 * Allow to cancel commission invoice
 * Add broker fee management
