endorsement_insurance_invoice : Allow to select a direct debit account which is not the subscriber's
review http://rietveld.coopengo.com/16090001

--- a/modules/endorsement_insurance_invoice/locale/fr_FR.po
+++ b/modules/endorsement_insurance_invoice/locale/fr_FR.po
@@ -7,6 +7,12 @@ msgid "Please set a  new direct debit account !"
 msgstr "Veuillez renseigner le nouveau compte bancaire !"
 
 msgctxt "error:contract.billing_information.change:"
+msgid "Subscriber does not own this account, do you want it to change ?"
+msgstr ""
+"Le souscripteur n'est pas propriétaire du compte, voulez-vous l'y rattacher "
+"?"
+
+msgctxt "error:contract.billing_information.change:"
 msgid ""
 "The contract %s does not have an invoice starting on the %s. Select another "
 "date."
@@ -21,6 +27,12 @@ msgstr "La date %s n'est pas compatible avec le mode de quittancement %s."
 msgctxt "error:contract.direct_debit_account.change:"
 msgid "Please set a  new direct debit account !"
 msgstr "Veuillez renseigner le nouveau compte bancaire !"
+
+msgctxt "error:contract.direct_debit_account.change:"
+msgid "Subscriber does not own this account, do you want it to change ?"
+msgstr ""
+"Le souscripteur n'est pas propriétaire du compte, voulez-vous l'y rattacher "
+"?"
 
 msgctxt "error:contract.direct_debit_account.change:"
 msgid ""
@@ -53,6 +65,14 @@ msgstr "Mise à jour de %s"
 msgctxt "error:endorsement.contract:"
 msgid "Billing Modifications"
 msgstr "Modifications du quittancement"
+
+msgctxt "field:contract.billing_information,direct_debit_account_selector:"
+msgid "Bank Account"
+msgstr "Compte Bancaire"
+
+msgctxt "field:contract.billing_information,search_all_direct_debit_account:"
+msgid "Search all direct debit accounts"
+msgstr "Rechercher dans tout les comptes bancaires"
 
 msgctxt "field:contract.billing_information.change,contract:"
 msgid "Contract"
