endorsement_insurance_invoice : Filter quotes for propagation, display possible contracts status
Fix #1985
review http://rietveld.coopengo.com/16140001

--- a/modules/endorsement_insurance_invoice/locale/fr_FR.po
+++ b/modules/endorsement_insurance_invoice/locale/fr_FR.po
@@ -133,6 +133,11 @@ msgctxt ""
 msgid "Propagate"
 msgstr "Propager"
 
+msgctxt ""
+"field:contract.billing_information.change.contract_displayer,contract_status:"
+msgid "Contract Status"
+msgstr "Statut du contrat"
+
 msgctxt "field:contract.direct_debit_account.change,contract:"
 msgid "Contract"
 msgstr "Contrat"
