--- a/modules/endorsement_insurance_invoice/locale/fr_FR.po
+++ b/modules/endorsement_insurance_invoice/locale/fr_FR.po
@@ -76,7 +76,7 @@ msgstr "Compte Bancaire"
 
 msgctxt "field:contract.billing_information,search_all_direct_debit_account:"
 msgid "Search all direct debit accounts"
-msgstr "Rechercher dans tout les comptes bancaires"
+msgstr "Rechercher dans tous les comptes bancaires"
 
 msgctxt "field:contract.billing_information.change,contract:"
 msgid "Contract"
@@ -347,7 +347,7 @@ msgstr "Contrat"
 
 msgctxt "model:contract.direct_debit_account.change,name:"
 msgid "Change Direct Debit Account"
-msgstr "Modification du compte de prélèvement"
+msgstr "Modification des coordonnées bancaires"
 
 msgctxt "model:endorsement.contract.billing_information,name:"
 msgid "Endorsement Billing Information"
@@ -369,7 +369,7 @@ msgstr "Modification des paramètres de quittancement"
 msgctxt ""
 "model:endorsement.definition,name:change_direct_debit_account_definition"
 msgid "Change Direct Debit Account"
-msgstr "Modification du compte de prélèvement"
+msgstr "Modification des coordonnées bancaires"
 
 msgctxt "model:endorsement.part,name:"
 msgid "Change Bank Account"
@@ -383,7 +383,7 @@ msgstr "Modification des paramètres de quittancement"
 msgctxt ""
 "model:endorsement.part,name:change_direct_debit_account_endorsement_part"
 msgid "Change Direct Debit Account"
-msgstr "Modification du compte de prélèvement"
+msgstr "Modification des coordonnées bancaires"
 
 msgctxt ""
 "selection:contract.billing_information.change.contract_displayer,to_propagate:"
@@ -430,7 +430,7 @@ msgstr "Quittancement"
 
 msgctxt "view:contract.direct_debit_account.change:"
 msgid "Change Direct Debit Account"
-msgstr "Modification du compte de prélèvement"
+msgstr "Modification des coordonnées bancaires"
 
 msgctxt "view:endorsement.contract.billing_information.field:"
 msgid "Endorsement Field"
