--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -1,6 +1,12 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
+
+msgctxt "error:account.configuration:"
+msgid ""
+"Following products or coverages : %s have tax included option which is not "
+"allowed with document rounding method."
+msgstr ""
 
 msgctxt "error:account.invoice:"
 msgid ""
@@ -9,14 +15,6 @@ msgid ""
 msgstr ""
 "Impossible d'émettre la quittance \"%(invoice)s\" pour contract "
 "\"%(contract)s\" au statut \"%(status)s\""
-
-msgctxt "error:contract.bank_account.change:"
-msgid "The contract is not using a direct debit billing mode"
-msgstr "Le contrat n'utilise pas un mode de quittancement de type prélèvement"
-
-msgctxt "error:contract.bank_account.change:"
-msgid "This action is only possible on a contract"
-msgstr "Cette action est seulement disponible sur un contrat"
 
 msgctxt "error:contract.premium.display:"
 msgid "No contract found in context"
@@ -273,42 +271,6 @@ msgstr "Primes"
 msgctxt "field:contract,receivable_today:"
 msgid "Receivable Today"
 msgstr "À recevoir aujourd'hui"
-
-msgctxt "field:contract.bank_account.change.select,contract:"
-msgid "Contract"
-msgstr "Contrat"
-
-msgctxt "field:contract.bank_account.change.select,contract_start_date:"
-msgid "Contract Start Date"
-msgstr "Date d'effet du contrat"
-
-msgctxt "field:contract.bank_account.change.select,effective_date:"
-msgid "Effective Date"
-msgstr "Date d'effet"
-
-msgctxt "field:contract.bank_account.change.select,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:contract.bank_account.change.select,new_bank_account:"
-msgid "New Bank Account"
-msgstr "Nouveau compte bancaire"
-
-msgctxt "field:contract.bank_account.change.select,other_contracts:"
-msgid "Other Contracts"
-msgstr "Autres contrats"
-
-msgctxt "field:contract.bank_account.change.select,possible_contracts:"
-msgid "Possible Contracts"
-msgstr "Contrats possibles"
-
-msgctxt "field:contract.bank_account.change.select,previous_bank_account:"
-msgid "Previous Bank Account"
-msgstr "Compte bancaire précédent"
-
-msgctxt "field:contract.bank_account.change.select,subscriber:"
-msgid "Subscriber"
-msgstr "Souscripteur"
 
 msgctxt "field:contract.billing_information,billing_mode:"
 msgid "Billing Mode"
@@ -900,10 +862,6 @@ msgctxt "model:account.invoice.line.detail,name:"
 msgid "Invoice Line Detail"
 msgstr "Détail de ligne de quittance"
 
-msgctxt "model:contract.bank_account.change.select,name:"
-msgid "Select new bank account to use"
-msgstr "Selectionner le nouveau compte bancaire à utiliser"
-
 msgctxt "model:contract.billing_information,name:"
 msgid "Contract Billing Information"
 msgstr "Quittancement"
@@ -944,17 +902,13 @@ msgctxt "model:ir.action,name:"
 msgid "Invoice Frequencies"
 msgstr "Fréquences de quittancement"
 
-msgctxt "model:ir.action,name:act_balance"
-msgid "Contract Balance"
-msgstr "Balance du contrat"
-
-msgctxt "model:ir.action,name:act_change_contract_bank_account"
-msgid "Change Bank Account for Billing"
-msgstr "Changement du compte bancaire"
-
 msgctxt "model:ir.action,name:act_invoice"
 msgid "Invoice Contracts"
 msgstr "Génération des quittances"
+
+msgctxt "model:ir.action,name:act_move_line_contract_balance"
+msgid "Contract Balance"
+msgstr "Balance contrat"
 
 msgctxt "model:ir.action,name:act_offered_billing_mode"
 msgid "Billing Modes"
@@ -1039,6 +993,14 @@ msgstr "Annuel (365 jours)"
 msgctxt "selection:account.invoice.line.detail,frequency:"
 msgid "Yearly (Exact)"
 msgstr "Annuel (exact)"
+
+msgctxt "selection:account.move,kind:"
+msgid "Invoice Cancellation"
+msgstr "Annulation de quittance"
+
+msgctxt "selection:account.move,kind:"
+msgid "Invoice Posting"
+msgstr "Emission de quittance"
 
 msgctxt "selection:contract.premium,frequency:"
 msgid "Half-yearly"
@@ -1168,10 +1130,6 @@ msgctxt "view:account.invoice:"
 msgid "Total Amount"
 msgstr "Montant total"
 
-msgctxt "view:contract.bank_account.change.select:"
-msgid "Select New Bank Account"
-msgstr "Selectionner le nouveau compte bancaire"
-
 msgctxt "view:contract.billing_information:"
 msgid "Contract Billing Information"
 msgstr "Quittancement"
@@ -1247,15 +1205,6 @@ msgstr "Mode de quittancement"
 msgctxt "view:offered.product:"
 msgid "Billing Modes"
 msgstr "Modes de quittancement"
-
-msgctxt ""
-"wizard_button:contract.bank_account.change,select_new_account,change_account:"
-msgid "Change Account"
-msgstr "Changement du compte bancaire"
-
-msgctxt "wizard_button:contract.bank_account.change,select_new_account,end:"
-msgid "Cancel"
-msgstr "Annuler"
 
 msgctxt "wizard_button:contract.do_invoice,start,end:"
 msgid "Cancel"
