--- a/modules/account_payment_cog/CHANGELOG
+++ b/modules/account_payment_cog/CHANGELOG
@@ -1,3 +1,4 @@
+* Display information on the invoice if a payment is planned
 * Allow to generate a report when payment is rejected
 
 Version 1.4 - 2015-05-29
