report_engine: Enable one click printing or mail Fix #1362 review: http://rietveld.coopengo.com/16110001/

--- a/modules/report_engine/locale/fr_FR.po
+++ b/modules/report_engine/locale/fr_FR.po
@@ -89,6 +89,10 @@ msgctxt "field:report.create.preview.line,server_filepath:"
 msgid "Server Filename"
 msgstr "Nom du fichier serveur"
 
+msgctxt "field:report.create.preview.line,template:"
+msgid "Template"
+msgstr "Modèle"
+
 msgctxt "field:report.create.select_template,available_models:"
 msgid "Available Models"
 msgstr "Modèles disponibles"
@@ -148,6 +152,10 @@ msgstr "Corps du courrier électronique"
 msgctxt "field:report.template,mail_subject:"
 msgid "eMail Subject"
 msgstr "Sujet du courrier électronique"
+
+msgctxt "field:report.template,modifiable_before_printing:"
+msgid "Modifiable"
+msgstr "Editable"
 
 msgctxt "field:report.template,name:"
 msgid "Name"
@@ -317,6 +325,14 @@ msgctxt "field:report.template.version,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "help:report.template,modifiable_before_printing:"
+msgid ""
+"Set to true if you want to modify the generated document before sending or "
+"printing"
+msgstr ""
+"Mettre à vrai si vous voulez editer le document généré avant de l'imprimer "
+"ou de l'envoyer par mail"
+
 msgctxt "model:ir.action,name:act_doc_template"
 msgid "Document Templates"
 msgstr "Modèles de courriers"
@@ -453,6 +469,6 @@ msgctxt "wizard_button:report.create,select_model,end:"
 msgid "Cancel"
 msgstr "Annuler"
 
-msgctxt "wizard_button:report.create,select_model,preview_document:"
-msgid "Preview"
-msgstr "Prévisualiser"
+msgctxt "wizard_button:report.create,select_model,generate_reports:"
+msgid "Generate"
+msgstr "Générer"
