--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -852,7 +852,7 @@ msgstr "Dépense"
 
 msgctxt "model:ir.action,name:"
 msgid "Status History"
-msgstr "Gérer les Options"
+msgstr "Historique des statuts"
 
 msgctxt "model:ir.action,name:act_contract_activation_history_relate_form"
 msgid "Activation History"
